Fix the alignment of the navigation

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
 html {
   font-family: 'Noto Sans', sans-serif;
 }
+
+@media only screen and (min-width: 60em) {
+
+  nav {
+    text-align: right;
+  }
+
+}
